src/css/scss/fluid-covid-map-viz.scss
/* ... */
@media screen and (min-width: 1024px) {
    /******** Base styles ********/
    h2 {
        font-size: 2.1875rem;
    }

    h3,
    .h3 {
        font-size: 1.5rem;
        line-height: 1.5rem;
    }

    /******** Shared selectors ********/
    .fl-mapviz-icon-shadow {
        height: 2rem;
        width: 2rem;

        svg {
            height: 1rem;
            width: 1rem;
        }
    }

    /** Override the leaflet.css so that the zoom buttons shows below the search box on the mobile design **/
    .leaflet-control-container .leaflet-control-zoom {
        margin-top: 1rem;
    }

    /******** The disclaimer **********/
    #fl-mapviz-disclaimer {
        font-size: 1.125rem;
        padding: 1rem;
    }

    /******** The main container holding all 3 panels: map, a11y feature list and search results ********/

    /* Start: arrange positions of sub containers */
    .fl-mapviz-container {
        display: grid;
        font-size: 1.125rem;
        grid-template-columns: 1fr 2fr 1fr;

        /* Override the mobile css */
        height: inherit;
    }

    .fl-mapviz-query-wrapper {
        align-items: center;
        border-bottom: 1px solid #e5e5e5;
        display: flex;
        flex-direction: row;
        grid-column-end: 4;
        grid-column-start: 1;
        grid-row-end: 2;
        grid-row-start: 1;
        height: 5rem;
        padding: 0.5rem 0;

        /* Override the mobile css */
        position: relative;
        width: 100%;
    }

    .fl-mapviz-filter-panel {
        grid-column-end: 4;
        grid-column-start: 3;
        grid-row-end: 3;
        grid-row-start: 2;
        height: 43rem;

        /* Override the mobile css */
        max-height: inherit;
        position: inherit;
    }

    .fl-mapviz-city-list,
    .fl-mapviz-search-results {
        border-radius: 0;
        grid-column-end: 2;
        grid-column-start: 1;
        grid-row-end: 3;
        grid-row-start: 2;
        height: 43rem;

        /* Override the mobile css */
        max-height: inherit;
        position: inherit;
    }

    .fl-mapviz-map {
        grid-column-end: 3;
        grid-column-start: 2;
        grid-row-end: 3;
        grid-row-start: 2;

        /* Override the mobile css */
        height: 43rem;
    }

    .fl-mapviz-hospital-panel {
        grid-column-end: 4;
        grid-column-start: 1;
        grid-row-end: 4;
        grid-row-start: 3;

        /* Override the mobile css */
        max-height: inherit;
        position: inherit;
    }

    /* End: arrange positions of sub containers */

    /******** Expand/collapse buttons ********/
    .fl-mapviz-expand-collapse-button-wrapper {
        display: none;
    }

    /******** The panel with the query label, the query input box **********/

    /* The query label */
    .fl-mapviz-query-label {
        display: block;
        margin: 0 1rem;
    }

    .fl-mapviz-query-wrapper > svg {
        margin-left: 0;
        margin-right: -2.5rem;
        margin-top: 0;
        position: relative;
    }

    /* The query input box */
    .fl-mapviz-query-holder {
        flex-grow: 2;
        margin-right: 2rem;
    }

    /******** The accessibility filters panel **********/

    /* The a11y filter count */
    .fl-mapviz-filter-count-holder-on-desktop {
        align-items: center;
        align-self: center;
        border-radius: 50%;
        box-shadow: 0 0 4px var(--fColor, rgba(0, 0, 0, 0.25));
        display: flex;
        flex-direction: row;
        height: 3.5rem;
        justify-content: center;
        margin-right: 0.7rem;
        width: 3.5rem;

        .fl-mapviz-filter-count-on-desktop {
            margin: 0 0.5rem;
        }

        svg {
            height: 2rem;
            margin-left: 0.5rem;
            width: 1.5rem;
        }
    }

    .fl-mapviz-filter-panel-title {
        margin-left: 1rem;
    }

    /* The a11y filter list */
    .fl-mapviz-filter-tooltip-icon {
        margin-right: 0.5rem;
    }

    .fl-mapviz-apply-filters,
    .fl-mapviz-reset-filters {
        margin: 0.5rem;
    }

    /******** The city list panel ********/
    .fl-mapviz-city-list-title {
        justify-content: space-between;
    }

    .fl-mapviz-city {
        font-size: 1.5rem;
    }

    /******** The search results panel ********/
    .fl-mapviz-search-results {
        margin-right: 1rem;
    }

    .fl-mapviz-search-results-back-button,
    .fl-mapviz-hospital-back-button {
        justify-content: left;
    }

    /******** The hospital description panel ********/
    .fl-mapviz-hospital-panel .fl-mapviz-back-button-wrapper {
        display: none;
    }

    /******** The panel control buttons ********/
    .fl-panel-controls-on-mobile {
        display: none;
    }
}

@media screen and (max-width: 1024px) {
    /* A special class defined at the bottom of the css file so that it only available and affect the mobile view.
    The effect doesn't apply to the desktop view at all. */
    .fl-mapviz-hidden-on-mobile {
        /* Use !important to override the inline "display" css applied by javascript */
        display: none !important;
    }
}
/* ... */

